-- cabal-version:      >=1.10
-- name:               haskell-saucy
-- version:            0.1.0.0
-- 
-- -- A short (one-line) description of the package.
-- -- synopsis:
-- 
-- -- A longer description of the package.
-- -- description:
-- 
-- -- A URL where users can report bugs.
-- -- bug-reports:
-- 
-- -- The license under which the package is released.
-- -- license:
-- author:             Surya Bakshi
-- maintainer:         surya.bakshi@protonmail.com
-- 
-- -- A copyright notice.
-- -- copyright:
-- -- category:
-- build-type:         Simple
-- extra-source-files: README.md
-- 
-- library
-- 	exposed-modules: OptionallyLeak, Multicast, StaticCorruptions, Multisession, Commitment, AuthMap, ACast, ProcessIO, Async, Polynomial,
--     -- Modules included in this library but not exported.
--     -- other-modules:
-- 
--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     other-extensions: ImplicitParams, ScopedTypeVariables, Rank2Types, ConstraintKinds, PartialTypeSignatures, DeriveFunctor, DeriveFoldable, DeriveTraversable, RankNTypes, FlexibleInstances, FlexibleContexts, UndecidableInstances, DataKinds, MultiParamTypeClasses, OverloadedLists, PatternSynonyms, ParallelListComp,
-- 
--     build-depends:       base >=4.12 && <4.15, safe >=0.3 && <0.4, monadIO >=0.11 && <0.12, mtl >=2.2 && <2.3, containers >=0.6 && <0.7, random >=1.2 && <1.3, vector >=0.12 && <0.13, transformers >=0.5 && <0.6, galois-field >= 1.0.2 && < 1.1, poly >= 0.4.0 && < 0.5, monad-loops >=0.4 && < 0.5,
-- 
--     default-language: Haskell2010

-- Initial haskell-saucy.cabal generated by cabal init.  For further
-- documentation, see http://haskell.org/cabal/users-guide/

name:                haskell-saucy
version:             0.1.0.0
synopsis:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     ABA, BrachaBroadcast, OptionallyLeak, Multicast, StaticCorruptions, Multisession, Commitment, AuthMap, ACast, ProcessIO, Async, Polynomial
  -- other-modules:
  other-extensions:    ImplicitParams, ScopedTypeVariables, Rank2Types, ConstraintKinds, PartialTypeSignatures, DeriveFunctor, DeriveFoldable, DeriveTraversable, RankNTypes, FlexibleInstances, FlexibleContexts, UndecidableInstances, DataKinds, MultiParamTypeClasses, OverloadedLists, PatternSynonyms, ParallelListComp
  build-depends:       base >=4.12 && <4.15, safe >=0.3 && <0.4, monadIO >=0.11 && <0.12, mtl >=2.2 && <2.3, containers >=0.6 && <0.7, random >=1.2 && <1.3, vector >=0.12 && <0.13, transformers >=0.5 && <0.6, galois-field >= 1.0.2 && < 1.1, poly >= 0.4.0 && < 0.5, monad-loops >=0.4 && < 0.5
  -- hs-source-dirs:
  default-language:    Haskell2010
